[tool.poetry]
name = "л┤ли5"
version = "0.1.0"
description = ""
authors = ["Dartty123 <dariyatamanuk@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
